--- a/documentation/public/stylesheets/custom.css
+++ b/documentation/public/stylesheets/custom.css
@@ -7,3 +7,13 @@
 .sidebar_emoji {
     font-size: 25px;
 }
+
+#cover_title {
+	color: #fff;
+}
+
+.social-holder .social-icon {
+	width: 40px;
+	height: 40px;
+	margin: 0 8px;
+}
